45
================

23/02/22 Warning popup for person records #1086
23/02/22 Dangerous flag for individuals #902
21/02/22 Allow stock deduction when marking animal deceased #268
18/02/22 SavourLife: Allow interstate adoptable to be set per animal
17/02/22 Query builder criteria for good with cats/dogs/kids/housetrained
16/02/22 CC and BCC email dropdowns append instead of replacing addresses #1060
16/02/22 Include upcoming clinic appointments in fosterer email #1102
15/02/22 Update animal and person links in additional fields during merge #1100
15/02/22 Include batch number in AnimalVaccinations table token
12/02/22 Do not warn for matching blank addresses of banned owners
10/02/22 Stop malformed showif rules causing javascript errors
10/02/22 PetFinder: send H+F animals separate from adoptability and make an option
08/02/22 SavourLife: Change to token based authentication
07/02/22 PetFinder: Support Held and Found statuses
07/02/22 Increase the size of profile/treatment/dosage boxes in medical
04/02/22 Add ANIMALPICKUPLOCATION/ANIMALPICKUPADDRESS CSV import fields
27/01/22 Bug when advanced searching for pickup location
25/01/22 Set global search autocomplete to require 3 chars #1089
24/01/22 Include media date in photo URLs to petfinder to stop relisting issues #1087
24/01/22 data-min prevented setting waiting list urgency to 0
18/01/22 Trigger batch option to reset NNN code counts for the year
18/01/22 Only auto exclude animal images from forms, people etc not sent anywhere
18/01/22 SavourLife put trial adoptions on hold instead of adopted
17/01/22 Add options UI for default animal age
13/01/22 Multi-select should use last year of litters instead of active
13/01/22 Prevent inner radio/check group fields becoming required with showif
12/01/22 Show size/weight in banner to assist with giving medications
11/01/22 Fix bug with transport dialog buttons not re-enabling #1084
11/01/22 Require 3 chars to be typed before autocomplete of city/state #1085