@@ -1,6 +1,7 @@
 45
 ================
 
+25/02/22 Separate permissions for dispatch and respond to incident #1104
 23/02/22 Warning popup for person records #1086
 23/02/22 Dangerous flag for individuals #902
 21/02/22 Allow stock deduction when marking animal deceased #268
